--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eduarda- Página</title>
+    <link rel="stylesheet" href="pagina.css">
+</head>
+<body>
 
+    <section class="capa">
+<img class="senai"src="senai 1.png" alt="senai2">
+<div class="capa">
+<h1>MULTIMIDÍA</h1>
+<h3>SENAI- José Bonifácio</h3>
+<p>Projeto individual</p>
+<p>Sprint 4- 1° Semestre- Turma 2023</p>
+</div>
+    </section>
+
+<!-- fim da 1° seção -->
+
+    <section class="sobremim">
+        <div class="eduarda">
+    <img class="duda" src="dudeca.jpg">
+</div>
+<div class="eu">
+<h2>Eduarda dos Reis Machado</h2>
+<p>Texto sobre mim...</p>
+    <p>Tenho 16 anos, estou cursando o segundo ano do ensino médio, sou estudante de multimidía do senai, gosto de treinar, sair com meus amigos e do São Paulo Futebol Clube. </p>
+</div>
+</section>
+
+<!-- fim da 2° seção -->
+
+<section class="portfolio">
+    <div class="linkedin">
+        <a href="file:///C:/Users/Aluno/Downloads/Manual%20de%20Identidade%20Visual%20CINE%20BRASIL.pdf">
+        <img src="linkedin.png">
+        <h2>LinkedIn</h2>
+    </a>
+    </div>  
+
+<div class="linkedin">
+    <a href="https://github.com/eduardaaaaaaaa">     
+    <img src="github.png">
+    <h2>Githhub</h2>
+</a>
+</div>
+
+<div class="linkedin">
+    <a href="https://www.figma.com/file/2aLK9luXI1xkGQpSrUDwYB/Untitled?type=design&node-id=3%3A2&mode=design&t=B3Qnj3haJkA2hpGq-1">
+    <img src="figma.png">
+    <h2>Figma</h2>
+</a>
+</div>
+</section>
+
+<!-- Fim da 3° seção -->
+
+<section class="cnb">
+    <div class="cinebrasil">
+    <h2>Cine Brasil</h2>
+    <p>Nosso objetivo é promover a cultura brasileira, ou seja, valorizar os diferentes
+        tipos de entretenimentos nacionais. Pensamos no problema na qual o cinema brasileiro não é
+        tão valorizado quanto os internacionais, por isso, com o intuito de crescer o cinema nacional criamos 
+        o aplicativo com os diversos sucessos que contém conteúdos de qualidade e grandes críticas sociais.</p>
+   
+   <ul>
+<li>Projeto Manual de Identidade</li>
+<li>Projeto Figma</li>
+<li>Projeto Github</li>
+   </ul>
+</div>
+   <img class="logo" src="cinebrasil.png" alt="logo">
+</section>
+
+<!-- Fim da 4° seção  -->
+
+<section class="titulosgp">
+    <h3>Todos os grupos</h3>
+    <p>Veja aqui os projetos dos grupos da turma 2023 do Técnico de Multimídia.</p>
+
+    <div class="grupos">
+
+        <div class="grupo">
+            <a href="https://senaiprofbruna.github.io/multimidia/cinebrasil.html">
+                <img class="lg" src="Ativo 20 1.png" class="cine brasil" alt="cinebrasil">
+                </a>
+        </div>
+       
+        <div class="grupo">
+        <a href="https://senaiprofbruna.github.io/multimidia/playo.html">
+            <img class="lg" src="Ativo 1 1.png" class="playo" alt="playo">
+        </a>
+        </div>
+
+        <div class="grupo">
+        <a href="https://senaiprofbruna.github.io/multimidia/marts.html">
+            <img class="lg" src="Ativo 3 1.png" class="marts" alt="marts">
+            </a>
+        </div>
+
+        <div class="grupo">
+            <a href="https://senaiprofbruna.github.io/multimidia/booklet.html">
+            <img class="lg" src="Group 1.png" class="booklet" alt="booklet">
+            </a>
+        </div>
+
+
+        <div class="grupo">
+            <a href="https://senaiprofbruna.github.io/multimidia/astromusic.html">
+            <img class="lg" src="Rectangle 6.png" class="astro" alt="astro">
+            </a>
+        </div>
+
+        <div class="grupo">
+            <a href="https://senaiprofbruna.github.io/multimidia/caven.html">
+            <img class="lg" src="logo2 1.png" class="caven" alt="caven">
+            </a>
+        </div>
+
+        <div class="grupo">
+            <a href="https://senaiprofbruna.github.io/multimidia/leron.html">
+            <img class="lg1" src="logo preto 1.png" class="leron" alt="leron">
+            </a>
+        </div>
+
+      
+     </section>   
+
+</body>
+</html>
