--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eduarda- Página</title>
-    <link rel="stylesheet" href="pagina.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
